--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head> 
     <title>Tim</title>
+    <link rel="stylesheet" type="text/css" href="./css/main.css"/>
   </head>
   <body>
-    Testing
+    <div id="navBar"> 
+      
+    </div>
+    <div id="header">
+      <h2>Testing</h2>
+    </div>
   </body>
 </html>
